# MindScribe

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: config.py  llm.py  main.py
backend/api/: routes.py  schemas.py
backend/clinical/: cpt_codes.json  icd10_codes.json  interventions.json  risk_flags.py
backend/data/demo_transcripts/: 01_depression_session6.json  02_anxiety_session3.json  03_ptsd_session9.json  04_mixed_session4.json  05_intake_evaluation.json
backend/models/: note.py  patient.py  screening.py
backend/notes/: coder.py  generator.py  prompts.py
backend/screening/: adapter.py  engine.py  gad7.py  phq9.py  scorer.py
evaluation/: note_eval.py  screening_eval.py  test_transcripts.json
frontend/: index.css  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: ChatBubble.tsx  FormatSelector.tsx  NoteEditor.tsx  RiskAlert.tsx  ScoreCard.tsx  ScoreTrend.tsx
frontend/src/lib/: api.ts  scoring.ts
frontend/src/pages/: DashboardPage.tsx  NoteGeneratorPage.tsx  ScreeningPage.tsx
scripts/: seed_demo.py
